	- [roms]  $2820: removed obsolete virtual link cable
	- [roms]  $2821: merged Lionel's patch: allow mix-up of images created by TiEmu 32-bits and TiEmu 64-bits 
		due to a bug in IMG_INFO structure
	- [roms]  $2824: fixed Lionel's logging problem (missing values on linkport output due to a bad use of External Activity flag
		in linkport support)
	- [roms]  $2825: added i18n support to some strings

- 16/09/2007, version 3.02:
	- [roms]  $2646: screenshots can be copied into the clipboard
	- [roms]  $2649: use fixed fonts for release and manpage dboxes
	- [roms]  $2652: removed old GTK file selector because being deprecated with GTK+ 2.12
	- [roms]  $2653: added accelerator key: F6 in code window
	- [roms]  $2654: added accelerator key: +/- in memory window
	- [kevin] $2656: fixed dirname+filename concatenation for KDE file selector
	- [kevin] $2657: fixed build with GTK+ 2.12
	- [roms]  $2658: dual-click in register window select the whole register value now;
		re-enabled popup menu (go to address).
	- [roms]  $2659: mapped both CTRL keys to Diamond & both SHIFT keys to 2nd
	- [roms]  $2660: added a popup menu with "View _memory" on any debugger window
	- [roms]  $2661: unified displaying of hexadecimal values (removed '$' and ''0x' heading chars) in boxes
	- [roms]  $2662: suppress leading zeros like VTi does
	- [roms]  $2663: some instructions (trap, rts, reset...) was suffixed with .L which is not needed
	- [roms]  $2664: fixed wrong disassembly offset of MOVEM.L instruction
	- [roms]  $2665: fixed disassembly of MOVEP instruction
	- [roms]  $2666: fixed disassembly of MOVEQ instruction
	- [roms]  $2667: fixed disassembly of ori/andi/eori, addi/subi/cmpi, lea/rts instructions
	- [roms]  $2668: fixed disassembly of BT<tab>.W and changed BT into BRA
	- [roms]  $2669: added accelerator keys (F1..F8) in memory window
	- [roms]  $2670: map numerical ENTER key to TIKEY_ENTER on ti89, too
	- [roms]  $2672: moved UAE disassembler into disasm.c file